LIBDRUM-892. Fixes for Pull 3513 merge (text wrapping in navbar)
Fixes for some Pull 3513 pull changes that were lost in the DSpace 8.0
merge (compare these files against those in "7.6.2-drum-ui2").

This restores the text wrapping of navbar items, so that they don't
get cut off at narrower browser widths (see also LIBDRUM-873).

https://umd-dit.atlassian.net/browse/LIBDRUM-892

--- a/src/themes/dspace/app/header-nav-wrapper/header-navbar-wrapper.component.scss
+++ b/src/themes/dspace/app/header-nav-wrapper/header-navbar-wrapper.component.scss
@@ -31,8 +31,7 @@
       // UMD Customization
       // Change from dspace-angular Pull 3513
       //white-space: nowrap;
-      // End UMD Customzation
-      white-space: nowrap;
+      // End UMD Customization
       text-decoration: none;
     }
 
